phpma-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpma
  labels:
    app: phpma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpma
  template:
    metadata:
      labels:
        app: phpma
    spec:
      containers:
        - name: phpma
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: phpma-service
spec:
  type: ClusterIP
  selector:
    app: phpma
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
