ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - localhost
    secretName: example-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /mysql
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port:
              number: 3306
      - path: /phpma
        pathType: Prefix
        backend: 
          service:
            name: phpma-service
            port:
              number: 80
